--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <i class="fas fa-chalkboard-teacher" style="color: white; font-size: 35px;"></i> Prof. Jayesh Kasotiye
                 </div>
                 <div class="hoveropt">
-                    <a href="">
+                    <a href="#">
                     <i class="fa fa-envelope" style="color: white; font-size: 30px;"></i>&nbsp;im.jayesh@yahoo.in
                     </a>
                 </div>
@@ -56,11 +56,11 @@
                     <i class="fa fa-phone"style="color: white; font-size: 30px;"></i>&nbsp;7303539876
                 </div>
                 <div class="hoveropt">
-                    <a href="">
+                    <a href="#">
                     <i class="fa fa-instagram" style="color: white; font-size: 35px;"></i>
                 </a>
 
-                    <a href="">
+                    <a href="#">
                     &nbsp;&nbsp;
                     <i class="fa fa-twitter" style="color: white; font-size: 35px;"></i>
                 </a>
